Fix page width white space on right of .App container

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,6 @@
 
 .App {
   background-color: #b6cdbd;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
 }
 
 /* About section */
@@ -209,6 +206,10 @@ section ul li {
 
   #certification h2 {
     font-size: 55px;
+  }
+
+  .App {
+    margin-left: -14px;
   }
 }
 
